# scratch-notes

./: .gitignore  .gitmodules  README.md
assembly/: README.md
bash/: 02-variables.sh  03-user-input.sh  04-arguments.sh  05-if-statements.sh  06-file-test-operators.sh  07-append-to-file.sh  08-logical-operators.sh  10-basic-arithmetic.sh  12-case-statements.sh  13-case-statements-example.sh  14-arrays.sh  15-while-loops.sh  17-read-files.sh  18-until-loops.sh  19-for-loops.sh  20-execute-commands.sh  21-select-loops.sh  22-break-and-continue.sh  23-functions.sh  24-local-variables.sh  25-function-example.sh  26-readonly-commands.sh  27-signals.sh  27-traps.sh  28-debugging.sh  README.md
cmake/: README.md
cpp/: README.md  helloworld.cpp
cpp/examples/gtest/: CMakeLists.txt  README.md
cpp/examples/gtest/src/: test_fib.cpp
cpp/examples/spdlog/: CMakeLists.txt  README.md
cron/: README.md
d3/: README.md
discord/: README.md
docker/: README.md
google-sheets/: README.md  sheets.py  update_members.py
java/: README.md
jekyll/: .gitignore  Gemfile  README.md
julia/: 01-numbers.ipynb  02-types.ipynb  05-struct.ipynb  06-higher-order-functions.ipynb  07-types-deprecated.ipynb  README.md  test_macros.ipynb  test_path.jl  test_struct.ipynb  test_struct.jl
lua/: README.md  tcp-client.py  tcp-server.py  ulive.lua
meteor/: README.md
mysql/: rest_api.md  server.js
postgresql/: README.md  connect.cpp  create-insert.cpp  delete.cpp  select.cpp  update.cpp
processing/: README.md
pygame/: README.md
pyopengl/: 00-rotating-cube.py  01-pink-box.py  README.md
pyqt/: 00-message-box.py  00-simple-button.py  01-basic-widgets.py  02-qlabel.py  03-qcheckbox.py  04-combobox.py  05-qlistwidget.py  06-qlineedit.py  07-qspinbox.py  08-qslider.py  09-qdial.py  10-signal-button.py  11-signal-interface.py  12-connect-widgets.py  13-mouse-events.py  14-context-menu.py  15-color.py  16-qvboxlayout.py  17-qhboxlayout.py  (+23 more)
(+485 files in other folders)
